--- a/js/js笔记/11定时器.md
+++ b/js/js笔记/11定时器.md
@@ -2,13 +2,19 @@
 
 ##### 定时器:固定的时间时候执行一些操作
 
-setTimeout()	1.在某个时间之后执行		
+setTimeout()	1.在某个时间之后执行,(延时执行,只执行一次)		
 
 ​		两个参数		第一个是你需要执行的函数	(在参数里面写的函数是回调函数)
 
 ​				时间之后的参数作为回调函数的参数	
 
 ​					第二个多久之后执行ms毫秒	1s=1000ms	
+
+定时器的编号 通过编号对定时器进行操作(单个页面中唯一)
+
+​	clearInterval()清除定时器
+
+setInterval()每隔多少时间执行一次
 
 ##### js执行顺序
 
@@ -25,3 +31,7 @@ setTimeout()	1.在某个时间之后执行
 js是单线程的
 
 ​	同步和异步的代码执行顺序
+
+
+
+##### 补充:页面刷新频率 60hz  120hz
