--- a/js/js笔记/15排序算法.md
+++ b/js/js笔记/15排序算法.md
@@ -10,7 +10,7 @@
 
 ​	优化的:当数组长度小于30的时候,用的冒泡排序.长度大于30的时候用的是快排
 
-1.冒泡排序
+##### 1.冒泡排序
 
 ​	1.相邻比较
 
@@ -18,17 +18,33 @@
 
 ​	3.重复n次知道所有的都有序
 
-2.选择排序
+##### 2.选择排序
 
 ​	选择数组中最大或者最小的元素,然后提取出来放到前面或者后面
 
-3.
+##### 3.
 
 ​	fill()数组里面全部添加
 
 ​	.map()对数组的每一位进行操作
 
-4.猴子排序
+##### 4.猴子排序
+
+##### 5.快速排序
+
+​	1.需要将数组划分成两个部分,左边右边
+
+​	2.左边的所有元素都要小于右边的任何元素
+
+​	3.数组被划分成3个部分,左中右
+
+​	4.然后左右重复划分,知道不可划分,整个数组就有序了
+
+递归:
+
+​	阶乘 n! = n*(n-1)!
+
+指针:记录位置的标记.
 
 补充:
 
